Closed
Bug 206271
Opened 23 years ago
Closed 23 years ago
News Messages being marked as read automatically
Categories
(MailNews Core :: Networking, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.4final
People
(Reporter: jay, Assigned: Bienvenu)
References
Details
(Keywords: regression, Whiteboard: [fixed on branch and trunk])
Attachments
(2 files)
|
1.21 KB,
patch
|
Details | Diff | Splinter Review | |
|
946 bytes,
patch
|
mkaply
:
approval1.4+
|
Details | Diff | Splinter Review |
Windows 98SE, Mozilla 2003051808
While reading any group on any news server, messages are being marked as read
"on the fly" automatically without user intervention.
Can't pin down the actual occurence as to what initiates this behaviour but it
seems to happen when mailcheck is taking place. Disk activity proceeds and I can
watch messages being marked as READ "on the fly". Also, only current messages
downloaded "today" are affected.
Comment 1•23 years ago
|
||
Confirm this on all Win32 Seamonkey Nightlies from 1.4b+.2003051004 to
1.4b+.2003051908 (BTW: both pre- and post-beta Nightlies still call themselves
1.4b!).
AFAIS it's not one of the Disk Space settings in Offline&Disk Space as I assumed
previously. Maybe Junk Mail Controls (JMC) running amok? (BTW2: As long as JMC
do not work for news, the corresponding column should not be displayed).
\V/ Live long and prosper
PointedEars
Comment 2•23 years ago
|
||
I also see this with build 2003051608 and build 2003052004 on Windows XP.
When I´m reading news and a mail-check occurs (either automatically or initiated
by me) the unread news postings in the newsgroup I'm currently in are slowly
marked as read one after another. The strange thing is that not all messages are
marked as read. This bug just happened to me. Before Mozilla started marking
postings as read there were 70 unread messages, when it stopped there were 4 of
them still marked unread.
Some more characteristics of this bug:
1. It happens only to one newsgroup at a time.
2. The messages are marked read in the order they were received.
3. With a password protected news-server I was asked for the username and
password before every message that was marked read by this bug.
Requesting blocking 1.4 because this bug makes reading news very uncomfortable.
Raising severity to major for the same reason.
Comment 4•23 years ago
|
||
sounds related to bug #206469 maybe?
jay, can you get me a nntp protocol log?
Comment 5•23 years ago
|
||
adt: nsbeta1-
Please renominate if you have a reproducible testcase/narrow down the conditions
for the bug to occur and believe it warrants being fixed for the next Netscape
release. Thanks.
| Assignee | ||
Comment 6•23 years ago
|
||
putting news in summary
Summary: Messages being marked as read automatically → News Messages being marked as read automatically
I see this if new mail arrives and is automatically marked as Junk and moved
whilst I am reading a NG.
I suspect that this maybe a bizarre side-effect of the checkin for bug 180203,
because it updates the current view which, when this bug manifests itself, is a
NG not the Inbox. Also, when Jay first brought this up in n.p.m.mail-news ("Odd
Marked as READ behaviour") I didn't have the problem. I identified that my build
preceded the fix for bug 180203 whereas Jay's, and someone else seeing it,
post-dated it. Once I pulled a new tree that included the fix I started seeing
the problem too.
I'm going to back out that fix in my local tree and see if the problem goes
away again.
| Assignee | ||
Comment 8•23 years ago
|
||
that would be a bizarre side-effect, since the effect of the fix in bug 180203
is just to not add a hdr to the view - it shouldn't have anything to do with
marking the header read. Plus, the newsgroup view shouldn't get told about new
mail headers.
I wonder if what's happening is that there's some sort of global setting that
says download message bodies - I've seen similar problems in IMAP where we'll
start downloading bodies for offline use in folders not configured for offline
use, if we were already downloading bodies for offline use for another folder.
I'll go look for that.
As I said in the thread in n.p.m.m-n, it was a long-shot, but at the time Jay
was running 2003-05-17 and the other person 2003-05-16 but I was running
2003-05-15 so it would appear this problem appeared between 05-15 and 05-16 and
bug 180203 was the only one I could find which seemed to have anything to do
with message display.
I accept what you say about it not being the culprit but maybe those dates will
help narrow the search down for the cause?
| Assignee | ||
Comment 10•23 years ago
|
||
I'm not ruling out what you say, but it's not clear to me that this is so easily
reproducible that we can say the behaviour started with one build over another.
I'd like to think it's all one bug. Unfortunately, I only saw it once, and was
never able to reproduce it. I don't know how reproducible it is for other folks.
Comment 11•23 years ago
|
||
The bug seems fixed for I have encountered it no more since Win32 build 2003052008.
\V/ Live long and prosper
PointedEars
Comment 12•23 years ago
|
||
Still seeing it in
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030524
Comment 13•23 years ago
|
||
I'm using Win2k SP-3 currently with build 2003052408 and have definitely not
this bug. Maybe it's an XP problem.
Comment 14•23 years ago
|
||
This bug is still in trunk-build 2003052908. It happens (almost?) always to me
when I'm reading news and a new mail arrives.
It does also happen when the new mail remains in the Inbox-folder and is not
marked as junk.
Tested with Windows XP SP1 and a POP3 account.
| Assignee | ||
Comment 15•23 years ago
|
||
do you have your inbox configured for offline use (if using IMAP)? Is anyone
using IMAP, or just POP3?
Comment 16•23 years ago
|
||
POP3 here.
Re comment 13: I don't think it's XP only. The reporter is on Win98
Comment 17•23 years ago
|
||
Still seeing it with build 2003060108 WinXP
steps to reproduce :
1 send an email to yourself to have mail on your pop server
2 click on a newsgroup to have headers displayed in the headers pane
3 click on Get all new messages to download mail from your pop account
result : while mail is being downloaded, you see newsgroup messages being marked
as read. It doesn't seem to be related to junk mail filtering.
Comment 18•23 years ago
|
||
It's disappeared for me, but I suspect that it's temporary.
I had the bug working consistently (if you see what I mean) and spent a couple
of hours trying to establish a reproducible scenario (using the same method as
Pascal). Then Moz crashed, and when I restarted it I couldn't see the problem
anymore, and it still hasn't returned.
The fact that it disappeared after Moz crashed makes me wonder if it would have
still disappeared if I'd exited gracefully.
Also, like Pascal, I can confirm that it is not only occurring when mail gets
moved to Junk; guess I get so much spam that it just appeared that way.
bienvenu: I tried a build with the fix for bug 180203 backed out and still saw
the problem so I guess it was just my particular circumstances that led me to that.
Comment 19•23 years ago
|
||
*** Bug 209425 has been marked as a duplicate of this bug. ***
Comment 20•23 years ago
|
||
I finally figured out how to reproduce this bug (tested with 1.4 branch-build
20030614):
1. Write yourself a test mail to a POP3 account.
2. Select a newsgroup which contains messages that have the status "New" (marked
with green arrows on the small envelopes). You don't have to select a message.
3. Receive the testmail.
Result: All messages with status "New" in the selected newsgroup slowly get
their status changed to "Read" one after another.
Reproducible: Always
The crucial thing is that this bug does only happen with messages that have the
status "New" (represented by bold lines and marked with the green arrow on the
envelope). Messages that are just printed bold aren't affected. I think this is
the property that made it appear random and hard to reproduce.
| Assignee | ||
Comment 22•23 years ago
|
||
don't call filter plugins on newsgroups. I'm going to attach a second fix as
well to prevent the caller from doing this.
| Assignee | ||
Comment 23•23 years ago
|
||
this code tried to make it so that if mail was filtered into an open local
folder, we would run the spam filters on it. This patch makes it so we only do
this for local folders - Imap folders automatically run spam filters when
they're updated.
| Assignee | ||
Comment 24•23 years ago
|
||
fix checked in (second patch), r/sr=sspitzer. I'll ping Seth about getting this
into 1.4 or 1.4.1
| Assignee | ||
Comment 25•23 years ago
|
||
fixed on trunk.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 26•23 years ago
|
||
yes, r/sr=sspitzer (noted over aim)
thanks for fixing this, david.
I'll ping asa. it's too late for rc2, I think. but we'd want this low risk for
for 1.4 final.
Comment 27•23 years ago
|
||
Renominating, conditions of comment 5 are met.
Comment 28•23 years ago
|
||
Comment on attachment 125696 [details] [diff] [review]
proposed fix
a=mkaply
Attachment #125696 -
Flags: approval1.4+
Comment 29•23 years ago
|
||
I'm going to land this on the branch as soon as 1.4 rc 2 is out the door.
Flags: blocking1.4? → blocking1.4+
Whiteboard: [have r/sr/a for 1.4 branch, waiting for rc2 to be done]
Target Milestone: --- → mozilla1.4final
Comment 30•23 years ago
|
||
a=adt to land this on the 1.4 branch by tonight (before 2003-06-19 5am and no
later please). Please mark this with the fixed1.4 keyword once this lands.
Thanks.
Comment 31•23 years ago
|
||
just landed both patch on the branch.
r/sr=sspitzer, a=mkaply,sspitzer,adt
Keywords: fixed1.4
QA Contact: gchan → esther
Whiteboard: [have r/sr/a for 1.4 branch, waiting for rc2 to be done] → [fixed on branch and trunk]
Comment 32•23 years ago
|
||
Using branch build 20030619 on winxp, mac osx and linux this is fixed.
Note: I first confirmed I saw the problem by trying the scenario in comment 20.
I then tested that scenario only with the branch builds to see the fix.
replacing keyword fixed1.4 to verified1.4
Keywords: fixed1.4 → verified1.4
Comment 33•23 years ago
|
||
*** Bug 210073 has been marked as a duplicate of this bug. ***
Comment 34•23 years ago
|
||
*** Bug 210342 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: MailNews → Core
Updated•18 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•