landing bienvenu's fix for bug #206271 News Messages being marked as read automatically

r/sr=sspitzer, a=mkaply,sspitzer,adt